WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
296835
Storage Access API should not be usable in insecure contexts
https://bugs.webkit.org/show_bug.cgi?id=296835
Summary
Storage Access API should not be usable in insecure contexts
Charlie Wolfe
Reported
2025-08-01 17:35:58 PDT
...
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2025-08-01 17:36:09 PDT
<
rdar://problem/157337423
>
Charlie Wolfe
Comment 2
2025-08-01 17:37:03 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/48857
Tim Nguyen (:ntim)
Comment 3
2025-08-02 11:47:56 PDT
***
Bug 294888
has been marked as a duplicate of this bug. ***
EWS
Comment 4
2025-08-03 18:58:14 PDT
Committed
298179@main
(d4714a11767b): <
https://commits.webkit.org/298179@main
> Reviewed commits have been landed. Closing PR #48857 and removing active labels.
Tim Nguyen (:ntim)
Comment 5
2025-08-11 23:15:07 PDT
***
Bug 247286
has been marked as a duplicate of this bug. ***
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug