Storage Access API should not be usable in insecure contexts https://bugs.webkit.org/show_bug.cgi?id=296835 rdar://157337423

Reviewed by Tim Nguyen.

Implements 3.2.5 in https://privacycg.github.io/storage-access/#the-document-object

This progresses both of the tests below, but we won’t have CI coverage because we lack a local DNS
resolver.

imported/w3c/web-platform-tests/storage-access-api/hasStorageAccess-insecure.sub.window.html
imported/w3c/web-platform-tests/storage-access-api/requestStorageAccess-insecure.sub.window.html

* Tools/TestWebKitAPI/Tests/WebKitCocoa/ResourceLoadStatistics.mm:
(TEST(ResourceLoadStatistics, StorageAccessPromptSiteWithTrigger)):
(TEST(ResourceLoadStatistics, StorageAccessSupportMultipleSubFrameDomains)):
(TEST(ResourceLoadStatistics, StorageAccessGrantMultipleSubFrameDomains)):
Update these tests to work with an HTTPS server.

* Source/WebCore/dom/DocumentStorageAccess.cpp:
(WebCore::DocumentStorageAccess::hasStorageAccessQuickCheck):
(WebCore::DocumentStorageAccess::requestStorageAccess):

Canonical link: https://commits.webkit.org/298179@main